RESOLVED FIXED110849
Web Inspector: [PageAgent] can't find frame by security origin.
https://bugs.webkit.org/show_bug.cgi?id=110849
Summary Web Inspector: [PageAgent] can't find frame by security origin.
Eugene Klyuchnikov
Reported 2013-02-25 23:33:09 PST
In some cases InspectorPageAgent::findFrameWithSecurityOrigin returns NULL even if corresponding frame exists. Original issue: https://code.google.com/p/chromium/issues/detail?id=178073 White pane is displayed in Local storage URLS instead of keys & values
Attachments
Patch (2.06 KB, patch)
2013-03-03 23:40 PST, Alexander Pavlov (apavlov)
vsevik: review+
Alexander Pavlov (apavlov)
Comment 1 2013-02-26 00:04:28 PST
The issue is that document.setDomain("cnn.com") is executed against the main frame's document, whose security origin used to be "www.cnn.com". This results in a SecurityOrigin mismatch in the backend.
Alexander Pavlov (apavlov)
Comment 2 2013-03-03 23:40:41 PST
Alexander Pavlov (apavlov)
Comment 3 2013-03-03 23:46:52 PST
Note You need to log in before you can comment on or make changes to this bug.