Web Inspector: [PageAgent] can't find frame by security origin. https://bugs.webkit.org/show_bug.cgi?id=110849

Use toRawString() in order to compare Frames' SecurityOrigins for storage-related goals.

Reviewed by Vsevolod Vlasov.

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::findFrameWithSecurityOrigin):

Canonical link: https://commits.webkit.org/129648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144601 268f45cc-cd09-0410-ab3c-d52691b4dbfc